css/opendev.css
html, body {
	background: #fff;
}

img {
	max-width: 100%;
}

a.button,
.button {
	background: #6393d2;
	color: #fff;
	padding: 10px 15px;
	text-transform: uppercase;
	text-decoration: none;
	font-weight: 600;
	border: 0;
}

.leaflet-div-icon {
	background: url(../img/marker.png) no-repeat !important;
	width: 25px !important;
	height: 30px !important;
	margin-top: -30px !important;
	margin-left: -12px !important;
	border: 0 !important;
	box-sizing: border-box !important;
	text-align: center;
	padding-top: 5px;
	padding-left: 1px;
	font-weight: 800;
	font-size: 10px;
	line-height: 10px;
}

.mapgroup-container .mapgroup .map-nav-container .map-nav li a.active {
	background: #6393d2;
	border-color: #6393d2;
}

.mapgroup-container .mapgroup .map-nav-container .map-nav li a.active:after {
	border-bottom: 10px solid #6393d2;
}

.lang-en, .lang-pt, .lang-es {
	display: block;
}



/*
 * Header
 */

#od-head {
	padding: 40px 0 0;
	background: #292d56;
}

#od-head h1 {
	font-family: 'Droid Serif';
	font-size: 48px;
	line-height: 48px;
	margin: 0 40px 0 0;
	font-family: 700;
	letter-spacing: -4px;
	float: left;
}

#od-head h1 sup {
	font-size: 55%;
	position: relative;
	top: -10px;
}

#od-head h1 a {
	text-decoration: none;
	color: #6393d2;
}

#od-head h1.with-logo,
#od-head h1.with-logo a {
	text-indent: -9999px;
	line-height: 0;
}

#od-head h1.with-logo a img {
	display: block;
	max-width: 300px;
	max-height: 200px;
	width: auto;
	height: auto;
}

#od-head h2.side-title {
	font-family: 'Droid Serif';
	font-size: 30px;
	line-height: 48px;
	float: left;
	margin: 8px 0 0 0;
	color: #fff;
}


#od-head h2 [class^="icon-"],
#od-head h2 [class*=" icon-"] {
	font-size: 50%;
	margin-left: 10px;
}

#od-head h2 img {
	max-height: 38px;
	display: block;
	width: auto;
	margin-top: 5px;
}

#od-head .ms-dropdown-title {
	position: relative;
	z-index: 10;
	float: left;
	cursor: default;
}

#od-head .ms-dropdown-title:hover ul {
	display: block;
}

#od-head .ms-dropdown-title ul {
	position: absolute;
	top: 55px;
	left: -15px;
	display: none;
	background: #292d56;
}

#od-head .ms-dropdown-title ul li {
	border-bottom: 1px solid #000;
	margin: 0;
	padding: 0;
}

#od-head .ms-dropdown-title ul li a {
	display: block;
	padding: 15px;
	text-decoration: none;
	min-width: 180px;
	color: #fff;
}

/*
 * Header social nav
 */

#od-head #social-nav {
	float: right;
}

#od-head #social-nav a {
	float: left;
	line-height: 48px;
	margin: 5px 0 0 20px;
	text-decoration: none;
	font-size: 18px;
	text-transform: uppercase;
	color: #fff;
}

/*
 * Header MS nav
 */

#od-head #ms-nav {
	background: #373c6a;
	margin-top: 20px;
	position: relative;
	z-index: 99999;
}

#od-head #ms-nav ul,
#od-head #ms-nav ul li {
	margin: 0;
	padding: 0;
}

#od-head #ms-nav ul.ms-nav {
	width: 100%;
	position: relative;
}

#od-head #ms-nav ul.ms-nav > li {
	float: left;
	margin: 0;
	border-right: 1px solid rgba(0,0,0,0.15);
}

#od-head #ms-nav ul.ms-nav > li:first-child {
	border-left: 1px solid rgba(0,0,0,0.15);
}

#od-head #ms-nav ul.ms-nav > li > a {
	color: #333;
	text-decoration: none;
	display: block;
	float: left;
	padding: 20px;
	text-transform: uppercase;
	color: #fff;
	font-weight: 600;
	font-size: 14px;
}

#od-head #ms-nav ul li .sub-menu {
	display: none;
	position: absolute;
	top: 58px;
	left: 0;
	right: 0;
	background: #fff;
	color: #333;
	padding: 20px 0 20px 20px;
	z-index: 999999;
	border-bottom: 1px solid #c9c9c9;
	border-left: 1px solid #c9c9c9;
	border-right: 1px solid #c9c9c9;
	box-shadow: 0 5px 10px 0 rgba(0,0,0,0.1);
	-webkit-box-shadow: 0 5px 10px 0 rgba(0,0,0,0.1);
	-moz-box-shadow: 0 5px 10px 0 rgba(0,0,0,0.1);
	-o-box-shadow: 0 5px 10px 0 rgba(0,0,0,0.1);
}

#od-head #ms-nav ul li .sub-menu .first-menu {
	border-right: 1px solid #ccc;
	float: left;
	width: 15%;
	box-sizing: border-box;
}

#od-head #ms-nav ul li .sub-menu .first-menu li a {
	color: #666;
	text-decoration: none;
	padding: 15px 20px;
	display: block;
	text-transform: uppercase;
	font-size: 14px;
	line-height: 18px;
	font-weight: 600;
}

#od-head #ms-nav ul li .sub-menu .first-menu li a span {
	font-weight: normal;
	margin-right: 10px;
	font-size: 18px;
	float: left;
	color: #777;
}

#od-head #ms-nav ul li .sub-menu .first-menu li.active a {
	background: #eee;
}

#od-head #ms-nav ul li .sub-menu .first-menu li a:hover {
	color: #111;
}

#od-head #ms-nav ul li .sub-menu .content {
	float: left;
	width: 85%;
	padding: 0 0 0 20px;
	box-sizing: border-box;
}

#od-head #ms-nav ul li .sub-menu .content h2 {
	font-size: 14px;
	line-height: 18px;
	font-weight: 600px;
	margin: 15px 0;
	text-transform: uppercase;
	color: #999;
}

#od-head #ms-nav ul li .sub-menu .content ul {
}

#od-head #ms-nav ul li .sub-menu .content ul li {
	width: 33.3333%;
	float: left;
	padding-right: 40px;
	box-sizing: border-box;
}

#od-head #ms-nav ul li .sub-menu .content ul li h3 {
	font-size: 16px;
	margin: 0 0 10px;
	line-height: 20px;
}

#od-head #ms-nav ul li .sub-menu .content ul li h3 a {
	text-decoration: none;
}

#od-head #ms-nav ul.ms-nav > li:hover {
	background: #fff;
	border-left: 1px solid #c9c9c9;
	border-right: 1px solid #c9c9c9;
}

#od-head #ms-nav ul.ms-nav > li:hover a {
	color: #333;
}

#od-head #ms-nav ul.ms-nav li:hover .sub-menu {
	display: block;
}

/*
 * Header main nav
 */

#od-head #main-nav {
	background: #fff;
	margin: 0;
	border-top: 1px solid #ddd;
	border-bottom: 1px solid #c9c9c9;
	box-shadow: 0 1px 10px 0 rgba(0,0,0,0.1);
}

#od-head #main-nav .qtrans_language_chooser {
	float: right;
	font-size: 12px;
	width: auto;
}

#od-head #main-nav .qtrans_language_chooser li {
	margin: 0 0 0 20px;
}

#od-head #main-nav .qtrans_language_chooser li a span {
	color: #333;
}

#od-head #main-nav ul,
#od-head #main-nav ul li {
	margin: 0;
	padding: 0;
}

#od-head #main-nav ul.menu {
	width: 100%;
	z-index: 9999;
	position: relative;
}

#od-head #main-nav ul.menu > li,
#od-head #main-nav .qtrans_language_chooser li {
	float: left;
	margin: 0 20px 0 0;
	position: relative;
}
/* ... */

